# digital_image_zoom_and_shrink

./: .gitignore  CMakeLists.txt  main.cpp
src/interpolation/bicubic/: Bicubic.h  Bicubic.ipp
src/interpolation/bilinear/: Bilinear.h  Bilinear.ipp
src/interpolation/curvature/: Curvature.h  Curvature.ipp
src/interpolation/nearest_neighbor/: NearestNeighbor.h  NearestNeighbor.ipp
src/interpolation/resizer/: Resizer.cpp  Resizer.h
src/interpolation/utils/: utils.h  utils.ipp
src/tests/: RunTests.h  RunTests.ipp
src/tests/benchmark/: BenchmarkAccuracy.h  BenchmarkAccuracy.ipp  BenchmarkOperations.h  BenchmarkOperations.ipp  BenchmarkTiming.h  BenchmarkTiming.ipp
src/tests/benchmark/operations/: OperationBicubic.h  OperationBicubic.ipp  OperationBilinear.h  OperationBilinear.ipp  OperationCurvature.h  OperationCurvature.ipp  OperationNearestNeighbor.h  OperationNearestNeighbor.ipp
src/tests/benchmark/utils/: OperationUtility.h  OperationUtility.ipp  OperationsCounter.cpp  OperationsCounter.h
